changed some comments and TODO items

--- a/README
+++ b/README
@@ -1,7 +1,13 @@
-MapReduce Simple (Mrs.)
+MapReduce Simple (Mrs)
 
-Mrs. is/will be a Simple MapReduce implementation.
+Mrs is a simple MapReduce implementation.
 
 
-alternative name:
-- Mrs. B.S.
+POSIX MapReduce:
+
+- shared storage are on an NFS volume
+- ssh to each machine and start up the same program as posix-slave
+- the slave listens on a public port, daemonizes, and returns the port #
+- or does the ssh session stay open???  SSH sessions can automatically close,
+  so that might not be a good idea.  On the other hand, you get automatic
+  encryption, etc.
