--- a/TODO
+++ b/TODO
@@ -2,3 +2,4 @@
 - logging
 - pass a dict of options from the application to the slaves
 - simplify job specification with an app_spec and job_spec (?)
+- separate out the concepts of slave id (ordinal number) and cookie
