--- a/TODO
+++ b/TODO
@@ -3,3 +3,4 @@
 - pass a dict of options from the application to the slaves
 - simplify job specification with an app_spec and job_spec (?)
 - separate out the concepts of slave id (ordinal number) and cookie
+- consider merging Supervisor and Slaves into one class
