--- a/TODO
+++ b/TODO
@@ -2,5 +2,6 @@
 - logging
 - pass a dict of options from the application to the slaves
 - simplify job specification with an app_spec and job_spec (?)
-- separate out the concepts of slave id (ordinal number) and cookie
 - consider merging Supervisor and Slaves into one class
+- improve the way you give a Job its operations list
+- do input splitting
