--- a/README
+++ b/README
@@ -19,3 +19,5 @@ The following items are the most urgent:
 - When sending URLs around, send (partition id, url) pairs instead of a list
   of URLs.  This will be more friendly for sparse lists and gradually updated
   lists.
+
+- Allow HDFS and WebDAV to be used for shared storage.
