Put the installation instructions in Installation.txt and Mrs intro into README

--- a/TODO
+++ b/TODO
@@ -45,14 +45,14 @@ TO TRY:
 - ssh to sage
 - mrs-potato.py
 
-
 TODO
+- Add setup utilities.
 - Default --mrs-local-shared (slave): mkdtmp /tmp (e.g. /tmp/mrs-slave.xyz)
   slave.py
-- Slave didn't quit
 - Wordcount tutorial: serial, master/slave(s), mrs-potato
 - Simple program tutorial
-- Graceful exit for bad file in both run modes
 - Slave should ping master and timeout after x seconds
 - SocketServer error on home computer when running parallel?
+
+
 
