--- a/README
+++ b/README
@@ -1,47 +1,87 @@
-MapReduce Simple (Mrs)
+===================
+Introduction to Mrs
+===================
 
-Mrs is a lightweight but highly scalable implimentation of the well known
-MapReduce programing paradigm developed at Google. It is written entirely in
-Python and was designed for ease of use in such areas as research and education
-where the larger and more complex implementations, such as Hadoop are not needed.
-Things to consider before beginning:
+The name Mrs might stand for MapReduce Simplified, or MapReduce
+Straightforward, or MapReduce Spartan.  Something that starts with S,
+anyway.  Mrs is a MapReduce implementation that aims to be easy to use
+and efficient.  We have tried to avoid reinventing the wheel.  Lots of
+other people have written job schedulers, so we don't include a job
+scheduler.  Other people have written network protocols, so we use
+those.  We aren't smart enough to outsmart everybody else.
 
-    -Mrs was developed to run on a Linux platform. There is no Windows version
-     available.
-    -Mrs is flexible enough to run on a single processor, if you want, but
-     was designed to handle large data sets while running on multiple machines. 
-    -Mrs is written in Python, so you will need to have it installed before
-     trying to install Mrs. 
+To learn about the MapReduce programming model, we suggest you begin by
+reading the MapReduce paper at http://labs.google.com/papers/mapreduce.html.
+We generally do things as described in the paper.  In examples/wordcount.py,
+we show our version of the WordCount MapReduce program described in the paper.
+We think it's pretty.
 
-
-Installation in a nutshell:
-
-If you are an experienced programmer familiar with MapReduce, this overview may
-be all that you need to get started, but if you still feel a little unsure how
-to proceed, a more detailed set of instructions are available below.
-
-    1. Using Git, clone the repository at git://aml.cs.byu.edu/mrs.git
-    2. Add the MRS_HOME/mrs directory to your PYTHONPATH.
-    3. Navigate to the MRS_HOME/examples directory and run wordcount.py,
-       passing it a text file (or text files) and an output directory. 
-
-If all went well you should have a file called source_something_something.mtxt
-in your output directory containing a list of all the words in the text file(s)
-with their respective counts. Congratulations! You are now ready to begin
-applying MapReduce to your own problems. Included with the source code are a
-couple of tutorials that cover writing your own basic and somewhat more
-complex Mrs implimentation. You may find these helpful.
+You may also find helpful the Installation instructions and tutorials we have
+included in the docs folder.
 
 
-Installation with a little more detail:
+Defining Map Functions
+======================
 
-These instructions assume that you are familiar with the Linux command line
-interface, the Python programing language and Git version control. 
+Let's look at how to create map functions in more detail.  The simple
+WordCount mapper is:
 
-  1. Using Git, clone the repository at git://aml.cs.byu.edu/mrs.git
+>>> def mapper(key, value):
+...     for word in value.split():
+...         yield (word, str(1))
+>>>
 
-    run: "git clone git://aml.cs.byu.edu/mrs.git
-    
-  2. Add the MRS_HOME/mrs directory to your PYTHONPATH.
-  
-    MRS_HOME refers to the path to the mrs root directory. 
+This is great for simple examples, but what do you do if you need to do
+something special, like initializing the mapper with options before
+processing any key-value pairs?  The following example shows how this
+may be done with a factory function that creates mappers:
+
+>>> def MapperFactory(options):
+...     ignore = options['ignore'].split(', ')
+...     def f(key, value):
+...         for word in value.split():
+...             if word not in ignore:
+...                 yield (word, str(1))
+...     return f
+>>>
+
+The MapReduce system will initialize the mapper with the options
+specified by the user.  It may do something like the following:
+
+>>> mapper = Mapper({'ignore': 'a, an, the'})
+>>>
+
+This mapper works the same as the first mapper, except that it ignores
+the articles in the list.
+
+An alternative way to approach the problem is to define a class that can
+be initialized with the parameters.  The following is equivalent to the
+previous example:
+
+>>> class MapperClass:
+...     def __init__(self, options):
+...         self.ignore = options['ignore'].split(', ')
+...     def __call__(self, key, value):
+...         for word in value.split():
+...             if word not in self.ignore:
+...                 yield (word, str(1))
+>>>
+
+This Mapper class can be instantiated with options:
+
+>>> mapper = Mapper({'ignore': 'a, an, the'})
+>>>
+
+We have shown three different ways to define a map function.  The simple
+generator is the best way when no initialization or saved state is
+needed.  The factory function is the best way when initialization is
+required but no saved state is needed.  The class is the best way when
+the generator needs to modify state while processing input.
+
+
+Complex MapReduce Programs
+==========================
+
+Sometimes a MapReduce program is more complex than a map operation
+followed by a reduce operation.
+
