Added reference to the google groups page

--- a/README
+++ b/README
@@ -18,3 +18,12 @@ We think it's pretty.
 
 You may also find helpful the Installation instructions and tutorials we have
 included in the tutorials folder.
+
+Issues (problems/bugs) can be reported on Mrs's Google code
+page:
+
+    http://code.google.com/p/mrs-mapreduce/
+
+Mrs feedback and questions are welcome at:
+
+    mrs-mapreduce@googlegroups.com
