--- a/docs/changelog.txt
+++ b/docs/changelog.txt
@@ -4,4 +4,15 @@
 Change Log
 *****************
 
+Version 0.6:
+------------
 
+#. Python setup utils
+#. Sphinx user documentation
+#. Various bug fixes
+
+
+Version 0.5:
+------------
+
+#. Initial release
